--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirecting</title>
-  <script>
-    window.location.replace("1.3");
-  </script>
+    <meta http-equiv="refresh" content="0; url=/latest">
 </head>
 <body>
+  Redirecting to latest...
 </body>
 </html>
